--- a/index.html
+++ b/index.html
@@ -1,26 +1,24 @@
 <!DOCTYPE html>
-<html>
+<head>
+<link href='https://fonts.googleapis.com/css?family=PT+Sans:400,400italic' rel='stylesheet' type='text/css'>
 
-<head>	
-  <meta charset="UTF-8">
-  <link href='https://fonts.googleapis.com/css?family=PT+Sans:400,400italic' rel='stylesheet' type='text/css'>
-</head>
+	</head>
 
-<title></title>
-<style></style>
+<title>It's Arrested Development</title>
+<style type="text/css"></style>
 
-<body background="http://i.imgur.com/KZLmEBX.png" id="bg">
+<body class="bg1">
   
 <div class="container-fluid">
   <div class="row"></div>
   <div class="col-mid-8"></div>
-  <a href="#"><img class="center-block img-rounded img-responsive" src="http://i.imgur.com/Y8UkHCQ.png?1" width="420"></a>
+  <a href="#"><img id="ad" class="center-block img-rounded img-responsive" src="http://i.imgur.com/Y8UkHCQ.png" width="420"></a>
   <br>
 
   <div class="row">
     <div class="col-mid-8">
-      <button type="button" class="quotebutton btn btn-warning center-block">
-        </i>Go!</button>
+      <button type="button" id="annyong" class="quotebutton btn btn-warning center-block">
+        </i>Annyong!</button>
     </div>
   </div>
   </br>
@@ -33,11 +31,8 @@
     </div>
   </div>
 
-<audio id="ive-1" src="http://jonyivesvoice.com/ive/1.mp3" preload="auto"></audio>
-<audio id="ive-2" src="http://jonyivesvoice.com/ive/2.mp3" preload="auto"></audio>
 
   </form>
  </div>
-</body>
 
-</html>
+</body>
